--- a/app/src/main/res/layout/frag_specialization.xml
+++ b/app/src/main/res/layout/frag_specialization.xml
@@ -35,6 +35,7 @@
             android:padding="10dp">
 
             <AutoCompleteTextView
+                android:textColor="@color/black"
                 android:id="@+id/actv_specializationCat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
