--- a/app/src/main/res/layout/activity_doctor_prescription.xml
+++ b/app/src/main/res/layout/activity_doctor_prescription.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#efefef"
-    tools:context="com.electrocraft.nirzo.pluse.view.activity.doctor.DoctorPrescription">
+    tools:context="com.electrocraft.nirzo.pluse.view.activity.doctor.DoctorPrescriptionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
