--- a/app/src/main/res/layout/labtest_editbox.xml
+++ b/app/src/main/res/layout/labtest_editbox.xml
@@ -70,5 +70,18 @@
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toStartOf="@+id/doc_pres_lab_ok_button_edit"
         app:layout_constraintTop_toBottomOf="@+id/ll_edit_lab" />
+    <Button
+        android:id="@+id/doc_pres_lab_delete_button_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/transparent"
+        android:onClick="labTestAdd"
+        android:text="Delete Entry"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toStartOf="@+id/doc_pres_lab_cancel_button_edit"
+        app:layout_constraintTop_toBottomOf="@+id/ll_edit_lab" />
 
 </android.support.constraint.ConstraintLayout>
