--- a/app/src/main/res/layout/rx_editbox.xml
+++ b/app/src/main/res/layout/rx_editbox.xml
@@ -62,6 +62,7 @@
                 android:paddingTop="3dp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -111,32 +112,46 @@
                 android:paddingTop="3dp" />
         </LinearLayout>
     </LinearLayout>
-        <Button
-            android:id="@+id/doc_pres_rx_ok_button_edit"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="18dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/transparent"
-            android:onClick="labTestAdd"
-            android:text="OK"
-            android:textAllCaps="false"
-            android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll_edit_rx" />
 
-        <Button
-            android:id="@+id/doc_pres_rx_cancel_button_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/transparent"
-            android:onClick="labTestAdd"
-            android:text="Cancel"
-            android:textAllCaps="false"
-            android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintEnd_toStartOf="@+id/doc_pres_rx_ok_button_edit"
-            app:layout_constraintTop_toBottomOf="@+id/ll_edit_rx" />
+    <Button
+        android:id="@+id/doc_pres_rx_ok_button_edit"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:onClick="labTestAdd"
+        android:text="OK"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_edit_rx" />
 
+    <Button
+        android:id="@+id/doc_pres_rx_cancel_button_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/transparent"
+        android:onClick="labTestAdd"
+        android:text="Cancel"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toStartOf="@+id/doc_pres_rx_ok_button_edit"
+        app:layout_constraintTop_toBottomOf="@+id/ll_edit_rx" />
+
+    <Button
+        android:id="@+id/doc_pres_rx_delete_button_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/transparent"
+        android:onClick="labTestAdd"
+        android:text="Delete Entry"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toStartOf="@+id/doc_pres_rx_cancel_button_edit"
+        app:layout_constraintTop_toBottomOf="@+id/ll_edit_rx" />
 </android.support.constraint.ConstraintLayout>
