--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#ededed"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ededed">
 
     <TextView
 
@@ -36,8 +36,6 @@
         app:layout_constraintTop_toBottomOf="@+id/tvLabel">
 
         <EditText
-            android:textColor="@color/black"
-            android:textColorHint="@color/gray"
             android:id="@+id/edtPatientDoctorAppointmentReason"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,6 +54,8 @@
             android:maxLines="10"
             android:minLines="6"
             android:scrollbars="vertical"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
             android:textSize="12sp" />
 
     </android.support.v7.widget.CardView>
@@ -70,8 +70,8 @@
         android:background="@color/white"
         android:clickable="true"
         android:focusable="true"
-        app:cardElevation="1dp"
         app:cardBackgroundColor="@color/white"
+        app:cardElevation="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cv">
@@ -135,14 +135,14 @@
     <Button
         android:id="@+id/btn_bookAppointment"
         android:layout_width="match_parent"
-        android:background="@drawable/rounded_button_normal"
-        android:textColor="@color/white"
         android:layout_height="40dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:background="@drawable/rounded_button_normal"
         android:text="Proceed to Payment"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
